--- a/src/app/shared/components/Card/cards.scss
+++ b/src/app/shared/components/Card/cards.scss
@@ -1,7 +1,10 @@
 .cardStyle{
   box-shadow: 0px 8px 15px 5px rgba(0,0,0,0.7);
+  min-width: 200px;
+  min-height: 300px;
 }
 
 .card-img-top{
   max-height: 320px;
+  width: 100%;
 }
