--- a/src/app/shared/components/Card/cards.scss
+++ b/src/app/shared/components/Card/cards.scss
@@ -1,6 +1,6 @@
-.cardStyle{
+.card-style{
   box-shadow: 0px 8px 15px 5px rgba(0,0,0,0.7);
-  min-width: 200px;
+  width: 15rem !important;
   min-height: 300px;
 }
 
